sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: type Inr
var value : Inr = getValeur(i);
            ^AlgInsertionSort:18: error: not found: value value
setValeur(j,value);	
            ^